find tune tree label layout

--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assigned-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assigned-selection.html
@@ -56,26 +56,38 @@
   <ul class="ehla-table-list" ui-tree-handle ng-class="[node._index_ % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
     <li style="width: 20%">
       <div ng-style="{'margin-left': 20*(depth()-1) + 'px'}" style="padding: 0 5px;">
-        <!--
-        <md-checkbox ng-checked="node.checkStatus==='checked'"
-                     md-indeterminate="node.checkStatus==='partlyChecked'"
-                     ng-click="toggleCheckAssigned(node)">
-        </md-checkbox>
-        -->
-        <a class="btn btn-xs" ng-if="node.child && node.child.length > 0"
-           data-nodrag
-           ng-click="toggleExpandAssigned(node)">
+        <table>
+          <tr>
+            <td>
+              <!--
+              <md-checkbox ng-checked="node.checkStatus==='checked'"
+                           md-indeterminate="node.checkStatus==='partlyChecked'"
+                           ng-click="toggleCheckAssigned(node)">
+              </md-checkbox>
+              -->
+            </td>
+            <td>
+              <a class="btn btn-xs" ng-if="node.child && node.child.length > 0"
+                 data-nodrag
+                 ng-click="toggleExpandAssigned(node)">
                                       <span class="icon s20" ng-class="{
                                           'icon-plus': !expandedAssigned[node.id],
                                           'icon-minus': expandedAssigned[node.id]
                                           }">
                                       </span>
-        </a>
-        <a class="btn btn-xs ng-scope" style="visibility: hidden"
-           ng-if="!node.child || !node.child.length">
+              </a>
+            </td>
+            <td>
+              <a class="btn btn-xs ng-scope" style="visibility: hidden"
+                 ng-if="!node.child || !node.child.length">
                                             <span class="icon icon-plus">
                                       </span></a>
-        <span>{{ node.name_en || node.name_zh }}</span>
+            </td>
+            <td>
+              <span>{{ node.name_en || node.name_zh }}</span>
+            </td>
+          </tr>
+        </table>
       </div>
     </li>
     <li style="width: 10%">
