--- a/fuse/src/app/main/homework/subjects/assignment/templates/assignment-item.html
+++ b/fuse/src/app/main/homework/subjects/assignment/templates/assignment-item.html
@@ -16,7 +16,7 @@
         </span>
 
 
-      <span style="border-bottom: 4px solid #eee; padding: 5px 0">{{card.title}}</span>
+      <span style="border-bottom: 4px solid #eee; padding: 5px 0;margin-right: 40px;display: block;">{{card.title}}</span>
       </span>
     </div>
 
