--- a/fuse/src/app/index.scss
+++ b/fuse/src/app/index.scss
@@ -11,6 +11,11 @@
  */
 // injector
 // endinjector
+
+ul.ehla-table-list md-checkbox.md-indeterminate .md-icon:after {
+  display: inline-block !important;
+}
+
 .custom-datatable-filter {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
