--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/teaching-progress/templates/topics-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/teaching-progress/templates/topics-selection.html
@@ -56,24 +56,36 @@
         <li style="width: 70%">
             <div ng-style="{'margin-left': 20*(depth()-1) + 'px'}" style="padding: 0 5px;"
                  ng-init="expanded[node.id] = true">
-                <md-checkbox ng-checked="node.checkStatus==='checked'"
-                             md-indeterminate="node.checkStatus==='partlyChecked'"
-                             ng-click="toggleCheck(node)">
-                </md-checkbox>
-                <a class="btn btn-xs" ng-if="node.child && node.child.length > 0"
-                   data-nodrag
-                   ng-click="toggleExpand(node)">
+                <table>
+                    <tr>
+                        <td>
+                            <md-checkbox ng-checked="node.checkStatus==='checked'"
+                                         md-indeterminate="node.checkStatus==='partlyChecked'"
+                                         ng-click="toggleCheck(node)">
+                            </md-checkbox>
+                        </td>
+                        <td>
+                            <a class="btn btn-xs" ng-if="node.child && node.child.length > 0"
+                               data-nodrag
+                               ng-click="toggleExpand(node)">
                                       <span class="icon s20" ng-class="{
                                           'icon-plus': !expanded[node.id],
                                           'icon-minus': expanded[node.id]
                                           }">
                                       </span>
-                </a>
-                <a class="btn btn-xs ng-scope" style="visibility: hidden"
-                   ng-if="!node.child || !node.child.length">
+                            </a>
+                        </td>
+                        <td>
+                            <a class="btn btn-xs ng-scope" style="visibility: hidden"
+                               ng-if="!node.child || !node.child.length">
                                             <span class="icon icon-plus">
                                       </span></a>
-                <span>{{ node.name_en || node.name_zh }}</span>
+                        </td>
+                        <td>
+                            <span>{{ node.name_en || node.name_zh }}</span>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </li>
         <li style="width: 30%;">
