fix to banner css

--- a/fuse/src/app/main/homework/subjects/assignment/assignment.html
+++ b/fuse/src/app/main/homework/subjects/assignment/assignment.html
@@ -5,7 +5,8 @@
 
   <!-- HEADER -->
   <div class="header md-accent-bg" layout="row" layout-align="start center"
-       style="background-image: url('/assets/images/banners/{{breadcrumbs.subject.s_name_en}}.jpg')">
+       style="background-image: url('/assets/images/banners/{{breadcrumbs.subject.s_name_en.toLowerCase()}}.jpg'),
+       url('/school/assets/images/banners/{{breadcrumbs.subject.s_name_en.toLowerCase()}}.jpg')">
     <div class="white-fg" layout="row" layout-align="start center" flex>
       <div layout="row" layout-align="start center">
         <div layout="column" layout-align="start start">
