--- a/fuse/src/app/main/settings/academic-year/academic-year.scss
+++ b/fuse/src/app/main/settings/academic-year/academic-year.scss
@@ -7,6 +7,10 @@ td.year-icons {
 
 }
 
+.academic-year-banner {
+  background-image: url('/assets/images/banners/academic-year.jpg');
+}
+
 .year-selected {
   background-color: rgba(178, 240, 249, 0.53) !important
 }
