--- a/fuse/src/app/main/users/users.html
+++ b/fuse/src/app/main/users/users.html
@@ -4,7 +4,7 @@
 
   <div ncy-breadcrumb></div>
   <!-- HEADER -->
-  <div class="header md-accent-bg" layout="row" layout-align="start center"
+  <div class="header md-accent-bg users-banner" layout="row" layout-align="start center"
        style="background-image: url('/assets/images/banners/users.jpg')">
     <div class="white-fg" layout="row" layout-align="start center" flex>
       <div layout="row" layout-align="start center">
