--- a/fuse/src/app/core/layouts/vertical-navigation.html
+++ b/fuse/src/app/core/layouts/vertical-navigation.html
@@ -1,5 +1,5 @@
 <div id="layout-vertical-navigation" class="template-layout" layout="row" flex>
-    <md-sidenav id="vertical-navigation" class="md-primary-bg" md-is-locked-open="$mdMedia('gt-sm')"
+    <md-sidenav id="vertical-navigation" class="md-primary-bg left-menu-banner" md-is-locked-open="$mdMedia('gt-sm')"
                 md-component-id="navigation" ms-scroll ui-view="navigation"></md-sidenav>
 
     <div id="content-container" flex layout="column">
