fix to banner css #2

--- a/fuse/src/app/index.scss
+++ b/fuse/src/app/index.scss
@@ -17,7 +17,7 @@ ul.ehla-table-list md-checkbox.md-indeterminate .md-icon:after {
 }
 
 .left-menu-banner {
-  background-image: url('/assets/images/menu/left-menu-green.jpg');
+  background-image: url('/assets/images/menu/left-menu-green.jpg') !important;
   background-size: cover;
 }
 
