--- a/fuse/src/app/main/settings/academic-year/academic-year.scss
+++ b/fuse/src/app/main/settings/academic-year/academic-year.scss
@@ -8,7 +8,7 @@ td.year-icons {
 }
 
 .academic-year-banner {
-  background-image: url('/assets/images/banners/academic-year.jpg');
+  background-image: url('/assets/images/banners/academic-year.jpg') !important;
 }
 
 .year-selected {
