--- a/fuse/src/app/main/users/users.scss
+++ b/fuse/src/app/main/users/users.scss
@@ -1,3 +1,3 @@
 .users-banner {
-  background-image: url('/assets/images/banners/users.jpg');
+  background-image: url('/assets/images/banners/users.jpg')  !important;
 }
