--- a/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
+++ b/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
@@ -29,10 +29,7 @@
               ng-class="[$index % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
             <ul class="ehla-table-list" style="padding: 0">
               <li style="width: 40%">
-                <md-checkbox ng-value="v.name_en || v.name_zh" ng-model="vm.node.selectedVideos[v.id]" class="no-margin"
-                             ng-disabled="!vm.isEditable">
                   <span>{{v.name_en || v.name_zh}}</span>
-                </md-checkbox>
               </li>
               <li style="width: 20%">
                 <md-select ng-model="v.video_custom_level" placeholder="Select Levels"
@@ -49,7 +46,7 @@
               <li style="width: 20%">
                 <md-input-container class="md-block" flex-gt-sm>
                   <label>Remark</label>
-                  <input ng-model="v.remark" ng-disabled="vm.isEditable">
+                  <input ng-model="v.remark">
                 </md-input-container>
               </li>
               <li style="width: 10%; text-align: center; position: relative" ng-style="{'background-color': v.isShowTutor ? 'background-color: rgb(2,136,209);' : 'auto'}">
