small css tweets

--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/templates/topics-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/templates/topics-selection.html
@@ -75,7 +75,7 @@
                     <tr>
                         <td>
                             <a class="btn btn-xs" ng-if="node.child && node.child.length > 0"
-                               data-nodrag ng-init="expanded[node.id] = true"
+                               data-nodrag
                                ng-click="toggleExpand(node)">
                                       <span class="icon s20" ng-class="{
                                           'icon-plus': !expanded[node.id],
