--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/assign-status/learning-detail/learning-setting/learning-setting.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/assign-status/learning-detail/learning-setting/learning-setting.html
@@ -197,9 +197,9 @@
                 <li style="width: 10%;">School Tailored Level</li>
                 <li style="width: 10%;">Language</li>
                 <li style="width: 10%;">Remark</li>
-                <li style="width: 10%;text-align: center;"><span style="margin-left: 0px;">Tutor</span></li>
+                <li style="width: 10%;text-align: center;">Tutor</li>
                 <li style="width: 10%;text-align: center;">
-                  <span style="margin-left: -15px;">Preview</span>
+                  Preview
                 </li>
               </ul>
             </div>
@@ -246,12 +246,14 @@
                   <div ng-if="v.tutor.name_en || v.tutor.name_zh">
                     <a style="cursor: pointer" ng-click="vm.showTutor(v)" ng-style="{'color': v.isShowTutor ? 'white' : 'auto'}">
                       <span>Tutors</span>
+                      <!--
                       <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isShowTutor"
                                class="icon s12 md-default-theme md-font material-icons"
                                aria-hidden="true"></md-icon>
                       <md-icon md-font-icon="icon-chevron-down" ng-if="v.isShowTutor"
                                class="icon s12 md-default-theme md-font material-icons"
                                aria-hidden="true"></md-icon>
+                               -->
                     </a>
                   </div>
                   <div ng-if="!v.tutor.name_en && v.tutor.name_zh">
@@ -261,12 +263,14 @@
                 <li style="width: 10%; text-align: center;" ng-style="{'background-color': v.isPreview ? 'background-color: rgb(2,136,209);' : 'auto'}">
                   <a style="cursor: pointer" ng-click="vm.preview(v)" ng-style="{'color': v.isPreview ? 'white' : 'auto'}">
                     <span>Preview</span>
+                    <!--
                     <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isPreview"
                              class="icon s12 md-default-theme md-font material-icons"
                              aria-hidden="true"></md-icon>
                     <md-icon md-font-icon="icon-chevron-down" ng-if="v.isPreview"
                              class="icon s12 md-default-theme md-font material-icons"
                              aria-hidden="true"></md-icon>
+                             -->
                   </a>
                 </li>
               </ul>
