--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-video.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-video.html
@@ -1,123 +1,131 @@
 <md-dialog class="video-dialog no-padding-margin" aria-label="New Task">
-    <form name="taskForm" class="md-inline-form" novalidate>
-        <md-toolbar class="md-accent md-hue-2">
-            <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
-                <span class="title">{{vm.node.name_en || vm.node.name_zh}} -> Select Video</span>
-                <md-button class="md-icon-button" ng-click="vm.closeDialog()">
-                    <md-icon md-font-icon="icon-close" aria-label="Close dialog"></md-icon>
-                </md-button>
+  <form name="taskForm" class="md-inline-form" novalidate>
+    <md-toolbar class="md-accent md-hue-2">
+      <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
+        <span class="title">{{vm.node.name_en || vm.node.name_zh}} -> Select Video</span>
+        <md-button class="md-icon-button" ng-click="vm.closeDialog()">
+          <md-icon md-font-icon="icon-close" aria-label="Close dialog"></md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
+
+    <md-dialog-content>
+
+      <div>
+        <ul class="ehla-table-list ehla-table-list-header">
+          <li style="width: 40%">
+            <span>Video</span>
+          </li>
+          <li style="width: 20%;">School Tailored Level</li>
+          <li style="width: 10%;">Language</li>
+          <li style="width: 20%;">Remark</li>
+          <li style="width: 10%;text-align: center;">Tutor</li>
+          <li style="width: 10%;text-align: center;">
+            Preview
+          </li>
+        </ul>
+      </div>
+      <ul class="ehla-table-list" ng-repeat="v in vm.node.videoList" style="border-bottom: none; padding: 0"
+          ng-class="[$index % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
+        <ul class="ehla-table-list" style="padding: 0">
+          <li style="width: 40%">
+            <md-checkbox ng-value="v.name_en || v.name_zh" ng-model="vm.node.selectedVideos[v.id]" class="no-margin"
+                         ng-disabled="!vm.isEditable">
+              <span>{{v.name_en || v.name_zh}}</span>
+            </md-checkbox>
+          </li>
+          <li style="width: 20%">
+            P1
+          </li>
+          <li style="width: 10%">
+            {{vm.displayLanguage(v.teaching_lang_type)}}
+          </li>
+          <li style="width: 20%">
+            {{v.remark || 'This is remark'}}
+          </li>
+          <li style="width: 10%; text-align: center; position: relative;
+              ng-style="{'background-color': v.isShowTutor ? 'background-color: rgb(2,136,209);' : 'auto'}">
+            <div ng-if="v.tutor.name_en || v.tutor.name_zh">
+              <a style="cursor: pointer" ng-click="vm.showTutor(v)"
+                 ng-style="{'color': v.isShowTutor ? 'white' : 'auto'}">
+                <span>Tutors</span>
+                <!--
+                <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isShowTutor"
+                         class="icon s12 md-default-theme md-font material-icons"
+                         aria-hidden="true"></md-icon>
+                <md-icon md-font-icon="icon-chevron-down" ng-if="v.isShowTutor"
+                         class="icon s12 md-default-theme md-font material-icons"
+                         aria-hidden="true"></md-icon>
+                         -->
+              </a>
             </div>
-        </md-toolbar>
-
-        <md-dialog-content>
-
-            <div>
-                <ul class="ehla-table-list ehla-table-list-header">
-                    <li style="width: 40%">
-                        <span>Video</span>
-                    </li>
-                    <li style="width: 20%;">School Tailored Level</li>
-                    <li style="width: 10%;">Language</li>
-                    <li style="width: 20%;">Remark</li>
-                    <li style="width: 10%;text-align: center;"><span style="margin-left: -40px;">Tutor</span></li>
-                    <li style="width: 10%;text-align: center;">
-                        <span style="margin-left: -30px;">Preview</span>
-                    </li>
-                </ul>
+            <div ng-if="!v.tutor.name_en && v.tutor.name_zh">
+              -
             </div>
-            <ul class="ehla-table-list" ng-repeat="v in vm.node.videoList" style="border-bottom: none; padding: 0"
-                ng-class="[$index % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
-                <ul class="ehla-table-list" style="padding: 0">
-                    <li style="width: 40%">
-                        <md-checkbox ng-value="v.name_en || v.name_zh" ng-model="vm.node.selectedVideos[v.id]" class="no-margin"
-                                     ng-disabled="!vm.isEditable">
-                            <span>{{v.name_en || v.name_zh}}</span>
-                        </md-checkbox>
-                    </li>
-                    <li style="width: 20%">
-                        P1
-                    </li>
-                    <li style="width: 10%">
-                        {{vm.displayLanguage(v.teaching_lang_type)}}
-                    </li>
-                    <li style="width: 20%">
-                      {{v.remark || 'This is remark'}}
-                    </li>
-                    <li style="width: 10%; text-align: center; position: relative" ng-style="{'background-color': v.isShowTutor ? 'background-color: rgb(2,136,209);' : 'auto'}">
-                        <div ng-if="v.tutor.name_en || v.tutor.name_zh">
-                            <a style="cursor: pointer" ng-click="vm.showTutor(v)" ng-style="{'color': v.isShowTutor ? 'white' : 'auto'}">
-                                <span>Tutors</span>
-                                <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isShowTutor"
-                                         class="icon s12 md-default-theme md-font material-icons"
-                                         aria-hidden="true"></md-icon>
-                                <md-icon md-font-icon="icon-chevron-down" ng-if="v.isShowTutor"
-                                         class="icon s12 md-default-theme md-font material-icons"
-                                         aria-hidden="true"></md-icon>
-                            </a>
-                        </div>
-                        <div ng-if="!v.tutor.name_en && v.tutor.name_zh">
-                            -
-                        </div>
-                    </li>
-                    <li style="width: 10%; text-align: center;" ng-style="{'background-color': v.isPreview ? 'background-color: rgb(2,136,209);' : 'auto'}">
-                        <a style="cursor: pointer" ng-click="vm.preview(v)" ng-style="{'color': v.isPreview ? 'white' : 'auto'}">
-                            <span>Preview</span>
-                            <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isPreview"
-                                     class="icon s12 md-default-theme md-font material-icons"
-                                     aria-hidden="true"></md-icon>
-                            <md-icon md-font-icon="icon-chevron-down" ng-if="v.isPreview"
-                                     class="icon s12 md-default-theme md-font material-icons"
-                                     aria-hidden="true"></md-icon>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="ehla-table-list info-section" style="padding: 0" ng-show="v.isShowTutor">
-                    <li style="width: 100%; position: relative" ng-repeat="tutor in v.tutors">
-                        <div layout="row" style="padding: 10px 0;">
-                            <div><img class="tutor-pic" ng-src="{{tutor.profile_pic_path}}" style="height: 200px;"></div>
-                            <div flex class="tutor-desc">
-                                <h2 style="text-align: center">
-                                    {{tutor.name_en || tutor.name_zh}}
-                                </h2>
-                                <h3 ng-if="tutor.title_en || tutor.title_zh">
-                                    test
-                                    {{tutor.title_en || tutor.title_zh}}
-                                </h3>
-                                <div style="padding: 0 30px">
-                                    {{tutor.short_description_en || tutor.short_description_zh}}
-                                </div>
 
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="ehla-table-list info-section" style="padding: 0" ng-show="v.isPreview">
-                    <li style="width: 100%; position: relative">
-                        <div id="video{{v.id}}" style="width: 100%; padding: 10px"></div>
-                    </li>
-                </ul>
-            </ul>
-
-        </md-dialog-content>
-
-        <md-dialog-actions>
-            <div layout="row" layout-align="end center" style="width: 100%">
-                <div>
-                    <md-button type="submit" ng-click="vm.save()" ng-show="vm.isEditable"
-                               class="send-button md-accent md-raised"
-                               aria-label="SAVE">
-                        Save
-                    </md-button>
+          </li>
+          <li style="width: 10%; text-align: center;"
+              ng-style="{'background-color': v.isPreview ? 'background-color: rgb(2,136,209);' : 'auto'}">
+            <a style="cursor: pointer" ng-click="vm.preview(v)" ng-style="{'color': v.isPreview ? 'white' : 'auto'}">
+              <span>Preview</span>
+              <!--
+              <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isPreview"
+                       class="icon s12 md-default-theme md-font material-icons"
+                       aria-hidden="true"></md-icon>
+              <md-icon md-font-icon="icon-chevron-down" ng-if="v.isPreview"
+                       class="icon s12 md-default-theme md-font material-icons"
+                       aria-hidden="true"></md-icon>
+                       -->
+            </a>
+          </li>
+        </ul>
+        <ul class="ehla-table-list info-section" style="padding: 0" ng-show="v.isShowTutor">
+          <li style="width: 100%; position: relative" ng-repeat="tutor in v.tutors">
+            <div layout="row" style="padding: 10px 0;">
+              <div><img class="tutor-pic" ng-src="{{tutor.profile_pic_path}}" style="height: 200px;"></div>
+              <div flex class="tutor-desc">
+                <h2 style="text-align: center">
+                  {{tutor.name_en || tutor.name_zh}}
+                </h2>
+                <h3 ng-if="tutor.title_en || tutor.title_zh">
+                  test
+                  {{tutor.title_en || tutor.title_zh}}
+                </h3>
+                <div style="padding: 0 30px">
+                  {{tutor.short_description_en || tutor.short_description_zh}}
                 </div>
-                <div>
-                    <md-button type="submit" ng-click="vm.cancel()"
-                               class="send-button md-raised"
-                               aria-label="Cancel">
-                        Cancel
-                    </md-button>
-                </div>
-            </div>
 
-        </md-dialog-actions>
-    </form>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <ul class="ehla-table-list info-section" style="padding: 0" ng-show="v.isPreview">
+          <li style="width: 100%; position: relative">
+            <div id="video{{v.id}}" style="width: 100%; padding: 10px"></div>
+          </li>
+        </ul>
+      </ul>
+
+    </md-dialog-content>
+
+    <md-dialog-actions>
+      <div layout="row" layout-align="end center" style="width: 100%">
+        <div>
+          <md-button type="submit" ng-click="vm.save()" ng-show="vm.isEditable"
+                     class="send-button md-accent md-raised"
+                     aria-label="SAVE">
+            Save
+          </md-button>
+        </div>
+        <div>
+          <md-button type="submit" ng-click="vm.cancel()"
+                     class="send-button md-raised"
+                     aria-label="Cancel">
+            Cancel
+          </md-button>
+        </div>
+      </div>
+
+    </md-dialog-actions>
+  </form>
 </md-dialog>
