--- a/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
+++ b/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
@@ -19,9 +19,9 @@
               <li style="width: 20%;">School Tailored Level</li>
               <li style="width: 10%;">Language</li>
               <li style="width: 20%;">Remark</li>
-              <li style="width: 10%;text-align: center;"><span style="margin-left: -40px;">Tutor</span></li>
+              <li style="width: 10%;text-align: center;">Tutor</li>
               <li style="width: 10%;text-align: center;">
-                <span style="margin-left: -30px;">Preview</span>
+                Preview
               </li>
             </ul>
           </div>
@@ -53,12 +53,15 @@
                 <div ng-if="v.tutor.name_en || v.tutor.name_zh">
                   <a style="cursor: pointer" ng-click="vm.showTutor(v)" ng-style="{'color': v.isShowTutor ? 'white' : 'auto'}">
                     <span>Tutors</span>
+                    <!--
                     <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isShowTutor"
                              class="icon s12 md-default-theme md-font material-icons"
                              aria-hidden="true"></md-icon>
                     <md-icon md-font-icon="icon-chevron-down" ng-if="v.isShowTutor"
                              class="icon s12 md-default-theme md-font material-icons"
                              aria-hidden="true"></md-icon>
+                             -->
+
                   </a>
                 </div>
                 <div ng-if="!v.tutor.name_en && v.tutor.name_zh">
@@ -68,12 +71,14 @@
               <li style="width: 10%; text-align: center;" ng-style="{'background-color': v.isPreview ? 'background-color: rgb(2,136,209);' : 'auto'}">
                 <a style="cursor: pointer" ng-click="vm.preview(v)" ng-style="{'color': v.isPreview ? 'white' : 'auto'}">
                   <span>Preview</span>
+                  <!--
                   <md-icon md-font-icon="icon-chevron-up" ng-if="!v.isPreview"
                            class="icon s12 md-default-theme md-font material-icons"
                            aria-hidden="true"></md-icon>
                   <md-icon md-font-icon="icon-chevron-down" ng-if="v.isPreview"
                            class="icon s12 md-default-theme md-font material-icons"
                            aria-hidden="true"></md-icon>
+                           -->
                 </a>
               </li>
             </ul>
