--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/teaching-progress/templates/topics-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/teaching-progress/templates/topics-selection.html
@@ -82,7 +82,7 @@
                                       </span></a>
                         </td>
                         <td>
-                            <span>{{ node.name_en || node.name_zh }}</span>
+                            <span>{{ node['name_' + language] }}</span>
                         </td>
                     </tr>
                 </table>
