--- a/fuse/src/app/index.scss
+++ b/fuse/src/app/index.scss
@@ -12,12 +12,83 @@
 // injector
 // endinjector
 
+/**
+Theme
+**/
+
+md-select * {
+  color: rgb(167, 96, 58)
+}
+
+md-icon {
+  color: rgb(167, 96, 58)
+}
+
+input {
+  color: rgb(167, 96, 58)
+}
+
+a.step-btn-link[disabled] span {
+  color: rgba(167, 96, 58, 0.47);
+}
+
+.username, #language-menu, .header .h2 {
+  color: rgb(167, 96, 58)
+}
+
+div.dataTables_wrapper {
+  label, select, .dataTables_info {
+    color: rgb(167, 96, 58)
+  }
+}
+
+.dataTables_wrapper .dataTables_paginate {
+  color: rgb(167, 96, 58)
+}
+
+md-select-menu.md-default-theme md-content md-optgroup, md-select-menu md-content md-optgroup {
+  color: rgb(167, 96, 58) !important
+}
+
+  /**
+  [md-theme="default"] .secondary-text, [md-theme="default"] .icon {
+    color: rgb(167, 96, 58) !important
+  }
+  **/
+
+.search .icon {
+  color: rgb(167, 96, 58) !important
+}
+
+::-webkit-input-placeholder { /* Chrome */
+  color: rgb(167, 96, 58) !important
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: rgb(167, 96, 58) !important
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: rgb(167, 96, 58) !important;
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: rgb(167, 96, 58) !important;
+  opacity: 1;
+}
+
+
+/**
+end theme
+**/
+
+
+
+
 ul.ehla-table-list md-checkbox.md-indeterminate .md-icon:after {
   display: inline-block !important;
 }
 
 .left-menu-banner {
-  background-image: url('/assets/images/menu/left-menu-green.jpg') !important;
+  background-image: url('/assets/images/menu/left-menu.jpg') !important;
   background-size: cover;
 }
 
@@ -125,11 +196,11 @@ div#calendarView {
 
 table.dataTable tbody {
   tr:nth-child(even) { background-color: white; }
-  tr:nth-child(odd) { background-color: #eee; }
+  tr:nth-child(odd) { background-color: #f5e8e0; }
 }
 
 table.dataTable thead tr {
-  background-color: rgb(85, 86, 86);
+  background-color: #8f6b53;
   .column-title {
     color: white;
   }
@@ -139,7 +210,7 @@ table.dataTable thead tr {
 }
 
 table.dataTable.hover tbody tr:hover {
-  background-color: #a4a9a6;
+  background-color: #efb4b4;
 }
 
 /**
@@ -162,6 +233,11 @@ ul.ehla-table-list {
   padding: 5px 0;
   margin: 0;
   border-bottom: 1px solid #eee;
+  color: rgb(167, 96, 58);
+}
+
+ul.ehla-table-list .icon {
+  color: rgb(167, 96, 58) !important;
 }
 
 
@@ -170,7 +246,7 @@ ul.ehla-table-list-even {
 }
 
 ul.ehla-table-list-odd {
-  background-color: #eee;
+  background-color: #f5e8e0;
 }
 
 ul.ehla-table-list md-checkbox {
@@ -181,7 +257,7 @@ ul.ehla-table-list-header {
   padding: 0 5px;
   font-weight: 600;
   line-height: 40px;
-  background-color: rgb(85, 86, 86);
+  background-color: #8f6b53;
   color: white;
 }
 
@@ -211,7 +287,7 @@ ul.ehla-table-list li.amount-padding {
 }
 
 ul.ehla-table-list:not(.ehla-table-list-header):hover {
-  background-color: #d6d6d6
+  background-color: #efb4b4;
 }
 
 .angular-ui-tree-nodes .angular-ui-tree-nodes {
