--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/consolidated-report-weakness/student-report/student-report.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/consolidated-report-weakness/student-report/student-report.html
@@ -10,7 +10,7 @@
       <div layout="row" layout-align="start center">
         <div layout="column" layout-align="start start">
           <div class="h2">
-            Weakness Report - {{breadcrumbs.weakness.name_en}}
+            Weakness Report - {{breadcrumbs.weakness['name_' + language]}}
           </div>
         </div>
       </div>
