--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/consolidated-report.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/consolidated-report.html
@@ -53,7 +53,7 @@
                                    multiple>
                             <md-optgroup label="Categories">
                                 <md-option ng-value="-1">All Categories</md-option>
-                                <md-option ng-value="category.id" ng-repeat="category in vm.categories">{{category.name_en || category.name_zh}}</md-option>
+                                <md-option ng-value="category.id" ng-repeat="category in vm.categories">{{category['name_' + language]}}</md-option>
                             </md-optgroup>
                         </md-select>
                     </md-input-container>
