--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/teaching-progress/teaching-progress.scss
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/teaching-progress/teaching-progress.scss
@@ -13,7 +13,7 @@
     input {
       padding-left: 12px;
       height: 36px;
-      color: rgba(0,0,0,.54);
+      color: rgb(167, 96, 58)
     }
   }
   .md-toolbar-tools {
