--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/unassigned-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/unassigned-selection.html
@@ -79,7 +79,7 @@
                                       </span></a>
             </td>
             <td>
-              <span>{{ node.name_en || node.name_zh }}</span>
+              <span>{{ node['name_' + language] }}</span>
             </td>
           </tr>
         </table>
