--- a/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/level-setting.html
+++ b/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/level-setting.html
@@ -76,7 +76,7 @@
                             <md-optgroup label="Categories">
                                 <md-option ng-value="-1">All Categories</md-option>
                                 <md-option ng-value="category.id" ng-repeat="category in vm.categories">
-                                    {{category.name_en || category.name_zh}}
+                                    {{category['name_' + language]}}
                                 </md-option>
                             </md-optgroup>
                         </md-select>
