--- a/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
+++ b/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/templates/assign-video.html
@@ -29,7 +29,7 @@
               ng-class="[$index % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
             <ul class="ehla-table-list" style="padding: 0">
               <li style="width: 40%">
-                  <span>{{v.name_en || v.name_zh}}</span>
+                  <span>{{v['name_' + language]}}</span>
               </li>
               <li style="width: 20%">
                 <md-select ng-model="v.video_custom_level" placeholder="Select Levels"
@@ -88,14 +88,14 @@
                   <div><img class="tutor-pic" ng-src="{{tutor.profile_pic_path}}" style="height: 200px;"></div>
                   <div flex class="tutor-desc">
                     <h2 style="text-align: center">
-                      {{tutor.name_en || tutor.name_zh}}
+                      {{tutor['name_' + language]}}
                     </h2>
                     <h3 ng-if="tutor.title_en || tutor.title_zh">
                       test
-                      {{tutor.title_en || tutor.title_zh}}
+                      {{tutor['title_' + language]}}
                     </h3>
                     <div style="padding: 0 30px">
-                      {{tutor.short_description_en || tutor.short_description_zh}}
+                      {{tutor['short_description_' + language]}}
                     </div>
 
                   </div>
