--- a/fuse/src/app/main/settings/levels/levels.html
+++ b/fuse/src/app/main/settings/levels/levels.html
@@ -71,7 +71,7 @@
               <md-select ng-model="node.ehlaLevels" placeholder="Select Levels" style="margin: 5px 10px 5px 0"
                          multiple>
                 <md-optgroup label="Levels">
-                  <md-option ng-value="level.level" ng-repeat="level in vm.levels">{{level.name_en}}</md-option>
+                  <md-option ng-value="level.level" ng-repeat="level in vm.levels">{{level['name_' + language]}}</md-option>
                 </md-optgroup>
               </md-select>
             </li>
