--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assigned-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assigned-selection.html
@@ -84,7 +84,7 @@
                                       </span></a>
             </td>
             <td>
-              <span>{{ node['name_' + language] }}</span>
+              <span>{{ node['name_' + language] || node.name }}</span>
             </td>
           </tr>
         </table>
